name align fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   -moz-text-align-last: center;
   text-align-last: center;
+  text-align: center;
   font-family: "Poppins", sans-serif;
 }
 
